--- a/docs/config.qmd
+++ b/docs/config.qmd
@@ -95,6 +95,7 @@ datasets:
     conversation: # Options (see Conversation 'name'): https://github.com/lm-sys/FastChat/blob/main/fastchat/conversation.py
     field_human: # Optional[str]. Human key to use for conversation.
     field_model: # Optional[str]. Assistant key to use for conversation.
+    field_tool: # Optional[str]. Assistant key to use for conversation.
     # Add additional keys from your dataset as input or output roles
     roles:
       input: # Optional[List[str]]. These will be masked based on train_on_input
